Resource updater: update rpc_call usages

--- a/hyperapp/guesser/update_resources.resources.yaml
+++ b/hyperapp/guesser/update_resources.resources.yaml
@@ -40,7 +40,6 @@ import:
 - legacy_type.legacy_type:type
 - legacy_type.partial:param
 - legacy_type.partial:partial
-- legacy_type.piece_ref:piece_ref
 - legacy_type.python_module:python_module
 - legacy_type.python_module:import_rec
 - legacy_type.update_resources:source_dep
@@ -49,16 +48,9 @@ import:
 - rpc.rpc_endpoint:rpc_endpoint_factory.service
 - transport.endpoint:endpoint_registry.service
 - subprocess.subprocess_rpc_server:subprocess_rpc_server_running.service
+- guesser.runner:runner.module
 
 definitions:
-
-  collect_attributes_ref:
-    _type: legacy_type.piece_ref:piece_ref
-    value: guesser.runner:collect_attributes
-
-  get_resource_type_ref:
-    _type: legacy_type.piece_ref:piece_ref
-    value: guesser.runner:get_resource_type
 
   update_resources.module:
     _type: legacy_type.python_module:python_module
@@ -66,6 +58,7 @@ definitions:
     file_name: update_resources.dyn.py
     import_list:
       code.utils: guesser.utils:utils.module
+      code.runner: guesser.runner:runner.module
       htypes.async_run.async_run: legacy_type.async_run:async_run
       htypes.attr_constructors.service: legacy_type.attr_constructors:service
       htypes.attribute.attribute: legacy_type.attribute:attribute
@@ -94,12 +87,10 @@ definitions:
       htypes.update_resources.module_deps: legacy_type.update_resources:module_deps
       services.builtin_types_as_dict: legacy_service:builtin_types_as_dict
       services.code_module_loader: legacy_service:code_module_loader
-      services.collect_attributes_ref: collect_attributes_ref
       services.constructor_creg: resource.constructor_creg:constructor_creg.service
       services.endpoint_registry: transport.endpoint:endpoint_registry.service
       services.hyperapp_dir: legacy_service:hyperapp_dir
       services.generate_rsa_identity: legacy_service:generate_rsa_identity
-      services.get_resource_type_ref: get_resource_type_ref
       services.legacy_module_resource_loader: legacy_service:legacy_module_resource_loader
       services.legacy_service_resource_loader: legacy_service:legacy_service_resource_loader
       services.legacy_type_resource_loader: legacy_service:legacy_type_resource_loader
