--- a/hyperapp/command_line/update_resources.resources.yaml
+++ b/hyperapp/command_line/update_resources.resources.yaml
@@ -1,10 +1,10 @@
 import:
 - legacy_service:mosaic
 - legacy_service:resource_registry
-- legacy_service:register_associations
 - legacy_type.attribute:attribute
 - legacy_type.python_module:python_module
 - guesser.update_resources:update_resources
+- common.association_registry:association_reg.service
 - common.meta_registry_association:meta_registry_association.module
 
 definitions:
@@ -14,10 +14,10 @@ definitions:
     module_name: update_resources
     file_name: update_resources.dyn.py
     import_list:
+      services.association_reg: common.association_registry:association_reg.service
       services.mosaic: legacy_service:mosaic
       services.update_resources: guesser.update_resources:update_resources
       services.resource_registry: legacy_service:resource_registry
-      services.register_associations: legacy_service:register_associations
       meta_registry_association: common.meta_registry_association:meta_registry_association.module
 
   update_resources:
