--- a/hyperapp/common/dyn_code_registry.resources.yaml
+++ b/hyperapp/common/dyn_code_registry.resources.yaml
@@ -1,19 +1,18 @@
 import:
-- common.association_registry:association.service
-- common.association_registry:association_reg.service
 - common.mark:mark.module
+- legacy_service:association_reg
 - legacy_service:mosaic
 - legacy_service:python_object_creg
 - legacy_service:web
 - legacy_type.attribute:attribute
 - legacy_type.code_registry:association
 - legacy_type.code_registry:constructor
-- legacy_type.meta_registry:meta_association
+- legacy_type.builtin:meta_association
 - legacy_type.python_module:python_module
 
 associations:
 
-- _type: legacy_type.meta_registry:meta_association
+- _type: legacy_type.builtin:meta_association
   t: legacy_type.code_registry:association
   fn: register
 
@@ -27,8 +26,7 @@ definitions:
       code.mark: common.mark:mark.module
       htypes.code_registry.constructor: legacy_type.code_registry:constructor
       htypes.code_registry.association: legacy_type.code_registry:association
-      services.association: common.association_registry:association.service
-      services.association_reg: common.association_registry:association_reg.service
+      services.association_reg: legacy_service:association_reg
       services.mosaic: legacy_service:mosaic
       services.python_object_creg: legacy_service:python_object_creg
       services.web: legacy_service:web
