--- a/hyperapp/guesser/update_resources.resources.yaml
+++ b/hyperapp/guesser/update_resources.resources.yaml
@@ -5,7 +5,6 @@ import:
 - legacy_service:builtin_types_as_dict
 - legacy_service:code_module_loader
 - legacy_service:hyperapp_dir
-- legacy_service:generate_rsa_identity
 - legacy_service:legacy_module_resource_loader
 - legacy_service:legacy_service_resource_loader
 - legacy_service:legacy_type_resource_loader
@@ -47,6 +46,7 @@ import:
 - resource.constructor_creg:constructor_creg.service
 - rpc.rpc_endpoint:rpc_endpoint_factory.service
 - transport.endpoint:endpoint_registry.service
+- transport.rsa_identity:generate_rsa_identity.service
 - subprocess.subprocess_rpc_server:subprocess_rpc_server_running.service
 - guesser.runner:runner.module
 
@@ -90,7 +90,7 @@ definitions:
       services.constructor_creg: resource.constructor_creg:constructor_creg.service
       services.endpoint_registry: transport.endpoint:endpoint_registry.service
       services.hyperapp_dir: legacy_service:hyperapp_dir
-      services.generate_rsa_identity: legacy_service:generate_rsa_identity
+      services.generate_rsa_identity: transport.rsa_identity:generate_rsa_identity.service
       services.legacy_module_resource_loader: legacy_service:legacy_module_resource_loader
       services.legacy_service_resource_loader: legacy_service:legacy_service_resource_loader
       services.legacy_type_resource_loader: legacy_service:legacy_type_resource_loader
