Convert 'python_module' resource module to resource-style; make it's types builtin

--- a/hyperapp/client/command_list.fixtures.fixtures.resources.yaml
+++ b/hyperapp/client/command_list.fixtures.fixtures.resources.yaml
@@ -6,7 +6,7 @@ import:
 - common.mark:mark.service
 - legacy_type.attribute:attribute
 - legacy_type.call:call
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 associations: []
 definitions:
   adapter:
@@ -14,7 +14,7 @@ definitions:
     object: command_list.fixtures.fixtures.module
     attr_name: adapter
   command_list.fixtures.fixtures.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: command_list.fixtures.fixtures
     file_name: command_list.fixtures.fixtures.dyn.py
     import_list:
