--- a/hyperapp/server/identity.resources.yaml
+++ b/hyperapp/server/identity.resources.yaml
@@ -9,11 +9,11 @@ import:
 - legacy_service:identity_registry
 - legacy_type.attribute:attribute
 - legacy_type.call:call
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 associations: []
 definitions:
   identity.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: identity
     file_name: identity.dyn.py
     import_list:
