--- a/hyperapp/client/command_list.fixtures.resources.yaml
+++ b/hyperapp/client/command_list.fixtures.resources.yaml
@@ -16,7 +16,7 @@ import:
 - legacy_type.command_list_fixtures:sample_global_command_d
 - legacy_type.impl:global_command_impl
 - legacy_type.legacy_type:type
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 associations: []
 definitions:
   GlobalCommandList.piece.parameter:
@@ -54,7 +54,7 @@ definitions:
     _type: legacy_type.call:call
     function: adapter_factory
   command_list.fixtures.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: command_list.fixtures
     file_name: command_list.fixtures.dyn.py
     import_list:
