--- a/hyperapp/client/command_list.resources.yaml
+++ b/hyperapp/client/command_list.resources.yaml
@@ -41,7 +41,7 @@ import:
 - legacy_type.impl:object_command_impl
 - legacy_type.impl:python_object_association
 - legacy_type.lcs:lcs_set_association
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 associations:
 - _type: legacy_type.global_command:global_command_association
   command: open_global_command_list.command
@@ -167,7 +167,7 @@ definitions:
     key_t: legacy_type.builtin:string
     dir: view_command_list_d
   command_list.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: command_list
     file_name: command_list.dyn.py
     import_list:
