--- a/hyperapp/client/local_server.fixtures.resources.yaml
+++ b/hyperapp/client/local_server.fixtures.resources.yaml
@@ -6,11 +6,11 @@ import:
 - common.mark:mark.service
 - legacy_type.attribute:attribute
 - legacy_type.call:call
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 associations: []
 definitions:
   local_server.fixtures.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: local_server.fixtures
     file_name: local_server.fixtures.dyn.py
     import_list:
