--- a/hyperapp/client/local_server.resources.yaml
+++ b/hyperapp/client/local_server.resources.yaml
@@ -9,13 +9,13 @@ import:
 - legacy_type.global_command:global_command_association
 - legacy_type.impl:global_command_impl
 - legacy_type.local_server:open_local_server_d
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 associations:
 - _type: legacy_type.global_command:global_command_association
   command: open_local_server.command
 definitions:
   local_server.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: local_server
     file_name: local_server.dyn.py
     import_list:
