--- a/hyperapp/common/bundler.resources.yaml
+++ b/hyperapp/common/bundler.resources.yaml
@@ -9,8 +9,8 @@ import:
 - legacy_service:mosaic
 - legacy_service:types
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.call:call
-- legacy_type.python_module:python_module
 associations: []
 definitions:
   aux_bundler_hooks:
@@ -25,7 +25,7 @@ definitions:
     object: bundler.module
     attr_name: bundler
   bundler.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: bundler
     file_name: bundler.dyn.py
     import_list:
