--- a/hyperapp/common/dyn_code_registry.resources.yaml
+++ b/hyperapp/common/dyn_code_registry.resources.yaml
@@ -8,7 +8,7 @@ import:
 - legacy_type.code_registry:association
 - legacy_type.code_registry:constructor
 - legacy_type.builtin:meta_association
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 
 associations:
 
@@ -19,7 +19,7 @@ associations:
 definitions:
 
   dyn_code_registry.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: dyn_code_registry
     file_name: dyn_code_registry.dyn.py
     import_list:
