--- a/hyperapp/common/failure.resources.yaml
+++ b/hyperapp/common/failure.resources.yaml
@@ -7,8 +7,8 @@ import:
 - legacy_service:on_stop
 - legacy_service:stop_signal
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.call:call
-- legacy_type.python_module:python_module
 associations: []
 definitions:
   failed:
@@ -19,7 +19,7 @@ definitions:
     _type: legacy_type.call:call
     function: failed
   failure.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: failure
     file_name: failure.dyn.py
     import_list:
