--- a/hyperapp/common/visitor.resources.yaml
+++ b/hyperapp/common/visitor.resources.yaml
@@ -1,10 +1,10 @@
 import:
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 
 definitions:
 
   visitor.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: visitor
     file_name: visitor.dyn.py
     import_list: []
