--- a/hyperapp/guesser/code_registry_ctr.resources.yaml
+++ b/hyperapp/guesser/code_registry_ctr.resources.yaml
@@ -4,7 +4,7 @@ import:
 - legacy_type.attribute:attribute
 - legacy_type.code_registry:association
 - legacy_type.code_registry:constructor
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 
 associations:
 
@@ -16,7 +16,7 @@ associations:
 definitions:
 
   code_registry_ctr.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: code_registry_ctr
     file_name: code_registry_ctr.dyn.py
     import_list:
