--- a/hyperapp/guesser/global_command_ctr.resources.yaml
+++ b/hyperapp/guesser/global_command_ctr.resources.yaml
@@ -7,11 +7,11 @@ import:
 - legacy_service:mosaic
 - legacy_service:types
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.code_registry:association
 - legacy_type.global_command:global_command_association
 - legacy_type.global_command_ctr:global_command_ctr
 - legacy_type.impl:global_command_impl
-- legacy_type.python_module:python_module
 - resource.constructor_creg:constructor_creg.service
 associations:
 - _type: legacy_type.code_registry:association
@@ -24,7 +24,7 @@ definitions:
     object: global_command_ctr.module
     attr_name: construct
   global_command_ctr.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: global_command_ctr
     file_name: global_command_ctr.dyn.py
     import_list:
