--- a/hyperapp/guesser/import_discoverer.resources.yaml
+++ b/hyperapp/guesser/import_discoverer.resources.yaml
@@ -4,7 +4,7 @@ import:
   - legacy_type.import_discoverer:import_discoverer
   - legacy_type.import_discoverer:using_incomplete_object
   - legacy_type.impl:python_object_association
-  - legacy_type.python_module:python_module
+  - legacy_type.builtin:python_module
 
 associations:
 
@@ -15,7 +15,7 @@ associations:
 definitions:
 
   import_discoverer.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: import_discoverer
     file_name: import_discoverer.dyn.py
     import_list:
