--- a/hyperapp/guesser/import_recorder.resources.yaml
+++ b/hyperapp/guesser/import_recorder.resources.yaml
@@ -3,7 +3,7 @@ import:
   - legacy_type.attribute:attribute
   - legacy_type.import_recorder:import_recorder
   - legacy_type.impl:python_object_association
-  - legacy_type.python_module:python_module
+  - legacy_type.builtin:python_module
 
 associations:
 
@@ -14,7 +14,7 @@ associations:
 definitions:
 
   import_recorder.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: import_recorder
     file_name: import_recorder.dyn.py
     import_list:
