--- a/hyperapp/guesser/object_command_ctr.fixtures.resources.yaml
+++ b/hyperapp/guesser/object_command_ctr.fixtures.resources.yaml
@@ -8,9 +8,9 @@ import:
 - legacy_service:resource_module_factory
 - legacy_service:resource_registry_factory
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.call:call
 - legacy_type.inspect:fn_attr
-- legacy_type.python_module:python_module
 associations: []
 definitions:
   attr:
@@ -45,12 +45,12 @@ definitions:
     object: object_command_ctr.fixtures.module
     attr_name: name_to_res
   object_command_ctr.fixtures.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: object_command_ctr.fixtures
     file_name: object_command_ctr.fixtures.dyn.py
     import_list:
+      htypes.builtin.python_module: legacy_type.builtin:python_module
       htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
-      htypes.python_module.python_module: legacy_type.python_module:python_module
       services.local_types: legacy_service:local_types
       services.mark: common.mark:mark.service
       services.resource_module_factory: legacy_service:resource_module_factory
