--- a/hyperapp/guesser/object_command_ctr.resources.yaml
+++ b/hyperapp/guesser/object_command_ctr.resources.yaml
@@ -7,12 +7,12 @@ import:
 - legacy_service:mosaic
 - legacy_service:types
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.code_registry:association
 - legacy_type.command:object_commands_d
 - legacy_type.impl:object_command_impl
 - legacy_type.lcs:lcs_set_association
 - legacy_type.object_command_ctr:object_command_ctr
-- legacy_type.python_module:python_module
 - resource.constructor_creg:constructor_creg.service
 associations:
 - _type: legacy_type.code_registry:association
@@ -25,7 +25,7 @@ definitions:
     object: object_command_ctr.module
     attr_name: construct
   object_command_ctr.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: object_command_ctr
     file_name: object_command_ctr.dyn.py
     import_list:
