--- a/hyperapp/guesser/parameter_ctr.resources.yaml
+++ b/hyperapp/guesser/parameter_ctr.resources.yaml
@@ -7,9 +7,9 @@ import:
 - legacy_service:mosaic
 - legacy_type.attr_constructors:parameter
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.call:call
 - legacy_type.code_registry:association
-- legacy_type.python_module:python_module
 - resource.constructor_creg:constructor_creg.service
 associations:
 - _type: legacy_type.code_registry:association
@@ -22,7 +22,7 @@ definitions:
     object: parameter_ctr.module
     attr_name: construct
   parameter_ctr.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: parameter_ctr
     file_name: parameter_ctr.dyn.py
     import_list:
