--- a/hyperapp/guesser/runner.resources.yaml
+++ b/hyperapp/guesser/runner.resources.yaml
@@ -19,13 +19,13 @@ import:
   - legacy_type.inspect:empty_list_t
   - legacy_type.inspect:coroutine_t
   - legacy_type.partial:partial
-  - legacy_type.python_module:python_module
+  - legacy_type.builtin:python_module
   - resource.constants:constants.module
 
 definitions:
 
   runner.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: runner
     file_name: runner.dyn.py
     import_list:
