--- a/hyperapp/guesser/test/test_resources/construct_resources_sample.expected.yaml
+++ b/hyperapp/guesser/test/test_resources/construct_resources_sample.expected.yaml
@@ -22,7 +22,7 @@ import:
 - legacy_type.impl:object_command_impl
 - legacy_type.impl:python_object_association
 - legacy_type.lcs:lcs_set_association
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 associations:
 - _type: legacy_type.global_command:global_command_association
   command: sample_global_command.command
@@ -69,7 +69,7 @@ definitions:
     key_t: legacy_type.builtin:int
     dir: sample_list_d
   construct_resources_sample.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: construct_resources_sample
     file_name: construct_resources_sample.dyn.py
     import_list:
