--- a/hyperapp/resource/attribute.resources.yaml
+++ b/hyperapp/resource/attribute.resources.yaml
@@ -1,11 +1,11 @@
 import:
 - legacy_service:python_object_creg
 - legacy_type.impl:python_object_association
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 - legacy_type.attribute:attribute
 definitions:
   attribute.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: attribute
     file_name: attribute.dyn.py
     import_list:
