--- a/hyperapp/resource/call.resources.yaml
+++ b/hyperapp/resource/call.resources.yaml
@@ -2,7 +2,7 @@ import:
 - legacy_service:python_object_creg
 - legacy_type.attribute:attribute
 - legacy_type.impl:python_object_association
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 - legacy_type.call:call
 associations:
 - _type: legacy_type.impl:python_object_association
@@ -10,7 +10,7 @@ associations:
   function: python_object
 definitions:
   call.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: call
     file_name: call.dyn.py
     import_list:
