--- a/hyperapp/resource/constants.resources.yaml
+++ b/hyperapp/resource/constants.resources.yaml
@@ -1,9 +1,9 @@
 import:
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 associations: []
 definitions:
   constants.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: constants
     file_name: constants.dyn.py
     import_list: {}
