--- a/hyperapp/resource/constructor_creg.resources.yaml
+++ b/hyperapp/resource/constructor_creg.resources.yaml
@@ -8,8 +8,8 @@ import:
 - legacy_service:types
 - legacy_service:web
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.call:call
-- legacy_type.python_module:python_module
 associations: []
 definitions:
   constructor_creg:
@@ -17,7 +17,7 @@ definitions:
     object: constructor_creg.module
     attr_name: constructor_creg
   constructor_creg.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: constructor_creg
     file_name: constructor_creg.dyn.py
     import_list:
