--- a/hyperapp/resource/mock_module.resources.yaml
+++ b/hyperapp/resource/mock_module.resources.yaml
@@ -3,7 +3,7 @@ import:
 - legacy_type.attribute:attribute
 - legacy_type.impl:python_object_association
 - legacy_type.mock_module:mock_module
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 
 associations:
 
@@ -13,7 +13,7 @@ associations:
 
 definitions:
   mock_module.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: mock_module
     file_name: mock_module.dyn.py
     import_list:
