--- a/hyperapp/resource/partial_ref.resources.yaml
+++ b/hyperapp/resource/partial_ref.resources.yaml
@@ -7,10 +7,10 @@ import:
 - legacy_service:fn_to_ref
 - legacy_service:mosaic
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.call:call
 - legacy_type.partial:param
 - legacy_type.partial:partial
-- legacy_type.python_module:python_module
 - legacy_type.raw:raw
 associations: []
 definitions:
@@ -19,7 +19,7 @@ definitions:
     object: partial_ref.module
     attr_name: partial_ref
   partial_ref.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: partial_ref
     file_name: partial_ref.dyn.py
     import_list:
