--- a/hyperapp/resource/raw.resources.yaml
+++ b/hyperapp/resource/raw.resources.yaml
@@ -2,7 +2,7 @@ import:
 - legacy_service:web
 - legacy_type.attribute:attribute
 - legacy_type.impl:python_object_association
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 - legacy_type.raw:raw
 associations:
 - _type: legacy_type.impl:python_object_association
@@ -10,7 +10,7 @@ associations:
   function: python_object
 definitions:
   raw.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: raw
     file_name: raw.dyn.py
     import_list:
