--- a/hyperapp/resource/test/test_resources/sample_fixture.fixtures.resources.yaml
+++ b/hyperapp/resource/test/test_resources/sample_fixture.fixtures.resources.yaml
@@ -1,10 +1,10 @@
 import:
   - legacy_type.sample_fixture:sample_servant_d
   - legacy_type.sample_fixture:sample_item
-  - legacy_type.python_module:python_module
+  - legacy_type.builtin:python_module
 definitions:
   sample_fixture:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: sample_fixture
     file_name: sample_fixture.fixtures.dyn.py
     import_list:
