--- a/hyperapp/resource/test/test_resources/sample_python_module.resources.yaml
+++ b/hyperapp/resource/test/test_resources/sample_python_module.resources.yaml
@@ -1,10 +1,10 @@
 import:
   - legacy_type.sample_python_module:sample_servant_d
   - legacy_type.sample_python_module:sample_item
-  - legacy_type.python_module:python_module
+  - legacy_type.builtin:python_module
 definitions:
   sample_python_module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: sample_python_module
     file_name: sample_python_module.dyn.py
     import_list:
