--- a/hyperapp/rpc/rpc_call.resources.yaml
+++ b/hyperapp/rpc/rpc_call.resources.yaml
@@ -7,15 +7,15 @@ import:
 - legacy_service:mosaic
 - legacy_service:types
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.call:call
-- legacy_type.python_module:python_module
 - legacy_type.rpc:param
 - legacy_type.rpc:request
 - transport.transport:transport.service
 associations: []
 definitions:
   rpc_call.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: rpc_call
     file_name: rpc_call.dyn.py
     import_list:
