--- a/hyperapp/rpc/rpc_call.tests.fixtures.resources.yaml
+++ b/hyperapp/rpc/rpc_call.tests.fixtures.resources.yaml
@@ -5,12 +5,12 @@
 import:
 - common.mark:mark.service
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.call:call
-- legacy_type.python_module:python_module
 associations: []
 definitions:
   rpc_call.tests.fixtures.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: rpc_call.tests.fixtures
     file_name: rpc_call.tests.fixtures.dyn.py
     import_list:
