--- a/hyperapp/rpc/rpc_endpoint.tests.fixtures.resources.yaml
+++ b/hyperapp/rpc/rpc_endpoint.tests.fixtures.resources.yaml
@@ -5,8 +5,8 @@
 import:
 - common.mark:mark.service
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.call:call
-- legacy_type.python_module:python_module
 associations: []
 definitions:
   python_object_creg:
@@ -17,7 +17,7 @@ definitions:
     _type: legacy_type.call:call
     function: python_object_creg
   rpc_endpoint.tests.fixtures.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: rpc_endpoint.tests.fixtures
     file_name: rpc_endpoint.tests.fixtures.dyn.py
     import_list:
