--- a/hyperapp/rpc/rpc_proxy.resources.yaml
+++ b/hyperapp/rpc/rpc_proxy.resources.yaml
@@ -1,13 +1,13 @@
 import:
   - legacy_service:mosaic
   - legacy_type.attribute:attribute
-  - legacy_type.python_module:python_module
+  - legacy_type.builtin:python_module
   - rpc.rpc_call:rpc_call_factory.service
 
 definitions:
 
   rpc_proxy.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: rpc_proxy
     file_name: rpc_proxy.dyn.py
     import_list:
