--- a/hyperapp/sample/sample_list.resources.yaml
+++ b/hyperapp/sample/sample_list.resources.yaml
@@ -11,7 +11,7 @@ import:
 - legacy_type.impl:method_command_impl
 - legacy_type.impl:python_object_association
 - legacy_type.lcs:lcs_set_association
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 - legacy_type.sample_list:item
 - legacy_type.sample_list:sample_list
 - legacy_type.sample_list:sample_list_d
@@ -48,7 +48,7 @@ definitions:
   object_commands_d:
     _type: legacy_type.command:object_commands_d
   sample_list.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: sample_list
     file_name: sample_list.dyn.py
     import_list:
