--- a/hyperapp/server/announce_provider.fixtures.resources.yaml
+++ b/hyperapp/server/announce_provider.fixtures.resources.yaml
@@ -8,11 +8,11 @@ import:
 - legacy_service:mosaic
 - legacy_type.attribute:attribute
 - legacy_type.call:call
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 associations: []
 definitions:
   announce_provider.fixtures.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: announce_provider.fixtures
     file_name: announce_provider.fixtures.dyn.py
     import_list:
