--- a/hyperapp/server/announce_provider.resources.yaml
+++ b/hyperapp/server/announce_provider.resources.yaml
@@ -7,12 +7,12 @@ import:
 - legacy_service:impl_registry
 - legacy_service:mosaic
 - legacy_type.impl:service_provider
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 - server.identity:server_identity.service
 associations: []
 definitions:
   announce_provider.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: announce_provider
     file_name: announce_provider.dyn.py
     import_list:
