--- a/hyperapp/server/init_local_server_ref.resources.yaml
+++ b/hyperapp/server/init_local_server_ref.resources.yaml
@@ -4,12 +4,12 @@
 
 import:
 - common.local_server:local_server_ref.service
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 - legacy_type.server_global_commands:server_global_commands
 associations: []
 definitions:
   init_local_server_ref.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: init_local_server_ref
     file_name: init_local_server_ref.dyn.py
     import_list:
