--- a/hyperapp/server/module_list.resources.yaml
+++ b/hyperapp/server/module_list.resources.yaml
@@ -25,7 +25,7 @@ import:
 - legacy_type.module_list:open_available_module_list_d
 - legacy_type.module_list:open_imported_module_list_d
 - legacy_type.module_list:open_module_list_d
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 associations:
 - _type: legacy_type.global_command:global_command_association
   command: open_available_module_list.command
@@ -62,7 +62,7 @@ definitions:
     key_t: legacy_type.builtin:string
     dir: module_list_d
   module_list.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: module_list
     file_name: module_list.dyn.py
     import_list:
