--- a/hyperapp/server/resources_view.fixtures.resources.yaml
+++ b/hyperapp/server/resources_view.fixtures.resources.yaml
@@ -6,7 +6,7 @@ import:
 - common.mark:mark.service
 - legacy_type.attribute:attribute
 - legacy_type.call:call
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 - legacy_type.resources_view:association_list
 - legacy_type.resources_view:resource_module_association_list
 - legacy_type.resources_view:resource_module_list
@@ -64,7 +64,7 @@ definitions:
     object: resources_view.fixtures.module
     attr_name: piece_4
   resources_view.fixtures.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: resources_view.fixtures
     file_name: resources_view.fixtures.dyn.py
     import_list:
