--- a/hyperapp/server/rpc_endpoint.resources.yaml
+++ b/hyperapp/server/rpc_endpoint.resources.yaml
@@ -5,12 +5,12 @@
 import:
 - legacy_service:endpoint_registry
 - legacy_service:rpc_endpoint_factory
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 - server.identity:server_identity.service
 associations: []
 definitions:
   rpc_endpoint.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: rpc_endpoint
     file_name: rpc_endpoint.dyn.py
     import_list:
