--- a/hyperapp/server/server_global_commands.fixtures.resources.yaml
+++ b/hyperapp/server/server_global_commands.fixtures.resources.yaml
@@ -10,7 +10,7 @@ import:
 - legacy_type.attribute:attribute
 - legacy_type.call:call
 - legacy_type.impl:global_command_impl
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 - legacy_type.server_global_commands:server_global_commands
 - legacy_type.server_global_commands_fixtures:sample_global_command_d
 associations: []
@@ -48,7 +48,7 @@ definitions:
     object: server_global_commands.fixtures.module
     attr_name: piece_2
   server_global_commands.fixtures.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: server_global_commands.fixtures
     file_name: server_global_commands.fixtures.dyn.py
     import_list:
