--- a/hyperapp/server/server_global_commands.resources.yaml
+++ b/hyperapp/server/server_global_commands.resources.yaml
@@ -16,7 +16,7 @@ import:
 - legacy_type.impl:method_command_impl
 - legacy_type.impl:python_object_association
 - legacy_type.lcs:lcs_set_association
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 - legacy_type.server_global_commands:item
 - legacy_type.server_global_commands:server_global_commands
 - legacy_type.server_global_commands:server_global_commands_d
@@ -53,7 +53,7 @@ definitions:
   object_commands_d:
     _type: legacy_type.command:object_commands_d
   server_global_commands.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: server_global_commands
     file_name: server_global_commands.dyn.py
     import_list:
