--- a/hyperapp/subprocess/subprocess_rpc_server_main.resources.yaml
+++ b/hyperapp/subprocess/subprocess_rpc_server_main.resources.yaml
@@ -5,7 +5,7 @@
 import:
 - legacy_service:mosaic
 - legacy_service:stop_signal
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 - rpc.rpc_call:rpc_call_factory.service
 - rpc.rpc_endpoint:rpc_endpoint_factory.service
 - subprocess.subprocess_transport:add_subprocess_server_connection.service
@@ -17,7 +17,7 @@ import:
 associations: []
 definitions:
   subprocess_rpc_server_main.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: subprocess_rpc_server_main
     file_name: subprocess_rpc_server_main.dyn.py
     import_list:
