--- a/hyperapp/subprocess/subprocess_transport.resources.yaml
+++ b/hyperapp/subprocess/subprocess_transport.resources.yaml
@@ -11,8 +11,8 @@ import:
 - legacy_service:stop_signal
 - legacy_service:unbundler
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.call:call
-- legacy_type.python_module:python_module
 - transport.identity:parcel_registry.service
 - transport.sync_route_table:route_table.service
 - transport.transport:transport.service
@@ -26,7 +26,7 @@ definitions:
     _type: legacy_type.call:call
     function: add_subprocess_server_connection
   subprocess_transport.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: subprocess_transport
     file_name: subprocess_transport.dyn.py
     import_list:
