--- a/hyperapp/transport/identity.resources.yaml
+++ b/hyperapp/transport/identity.resources.yaml
@@ -8,12 +8,12 @@ import:
 - legacy_service:types
 - legacy_service:web
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.call:call
-- legacy_type.python_module:python_module
 associations: []
 definitions:
   identity.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: identity
     file_name: identity.dyn.py
     import_list:
