--- a/hyperapp/transport/route_table.resources.yaml
+++ b/hyperapp/transport/route_table.resources.yaml
@@ -1,10 +1,10 @@
 import:
-- legacy_type.python_module:python_module
+- legacy_type.builtin:python_module
 - legacy_type.transport:route_association
 
 definitions:
   route_table.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: route_table
     file_name: route_table.dyn.py
     import_list:
