--- a/hyperapp/transport/tcp_transport.resources.yaml
+++ b/hyperapp/transport/tcp_transport.resources.yaml
@@ -11,9 +11,9 @@ import:
 - legacy_service:stop_signal
 - legacy_service:unbundler
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.call:call
 - legacy_type.code_registry:association
-- legacy_type.python_module:python_module
 - legacy_type.tcp_transport:route
 - transport.identity:parcel_registry.service
 - transport.route_registry:route_registry.service
@@ -38,7 +38,7 @@ definitions:
     _type: legacy_type.call:call
     function: tcp_server_factory
   tcp_transport.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: tcp_transport
     file_name: tcp_transport.dyn.py
     import_list:
