--- a/hyperapp/transport/transport.resources.yaml
+++ b/hyperapp/transport/transport.resources.yaml
@@ -7,8 +7,8 @@ import:
 - common.mark:mark.service
 - legacy_service:mosaic
 - legacy_type.attribute:attribute
+- legacy_type.builtin:python_module
 - legacy_type.call:call
-- legacy_type.python_module:python_module
 - transport.route_registry:route_registry.service
 - transport.sync_route_table:route_table.service
 associations: []
@@ -18,7 +18,7 @@ definitions:
     object: transport.module
     attr_name: transport
   transport.module:
-    _type: legacy_type.python_module:python_module
+    _type: legacy_type.builtin:python_module
     module_name: transport
     file_name: transport.dyn.py
     import_list:
