--- a/hyperapp/client/command_list.resources.yaml
+++ b/hyperapp/client/command_list.resources.yaml
@@ -39,7 +39,7 @@ import:
 - legacy_type.impl:list_spec
 - legacy_type.impl:method_command_impl
 - legacy_type.impl:object_command_impl
-- legacy_type.impl:python_object_association
+- legacy_type.builtin:python_object_association
 - legacy_type.lcs:lcs_set_association
 - legacy_type.builtin:python_module
 associations:
@@ -59,13 +59,13 @@ associations:
   piece_t: legacy_type.command_list:view_command_list
   ctr_fn: ViewCommandList
   spec: ViewCommandList.spec
-- _type: legacy_type.impl:python_object_association
+- _type: legacy_type.builtin:python_object_association
   t: legacy_type.command_list:global_command_list
   function: GlobalCommandList
-- _type: legacy_type.impl:python_object_association
+- _type: legacy_type.builtin:python_object_association
   t: legacy_type.command_list:object_command_list
   function: ObjectCommandList
-- _type: legacy_type.impl:python_object_association
+- _type: legacy_type.builtin:python_object_association
   t: legacy_type.command_list:view_command_list
   function: ViewCommandList
 - _type: legacy_type.lcs:lcs_set_association
