--- a/hyperapp/guesser/import_discoverer.resources.yaml
+++ b/hyperapp/guesser/import_discoverer.resources.yaml
@@ -3,12 +3,12 @@ import:
   - legacy_type.attribute:attribute
   - legacy_type.import_discoverer:import_discoverer
   - legacy_type.import_discoverer:using_incomplete_object
-  - legacy_type.impl:python_object_association
+  - legacy_type.builtin:python_object_association
   - legacy_type.builtin:python_module
 
 associations:
 
-- _type: legacy_type.impl:python_object_association
+- _type: legacy_type.builtin:python_object_association
   t: legacy_type.import_discoverer:import_discoverer
   function: ImportDiscoverer
 
