--- a/hyperapp/guesser/import_recorder.resources.yaml
+++ b/hyperapp/guesser/import_recorder.resources.yaml
@@ -2,12 +2,12 @@ import:
   - legacy_service:python_object_creg
   - legacy_type.attribute:attribute
   - legacy_type.import_recorder:import_recorder
-  - legacy_type.impl:python_object_association
+  - legacy_type.builtin:python_object_association
   - legacy_type.builtin:python_module
 
 associations:
 
-- _type: legacy_type.impl:python_object_association
+- _type: legacy_type.builtin:python_object_association
   t: legacy_type.import_recorder:import_recorder
   function: ImportRecorder
 
