--- a/hyperapp/guesser/test/test_resources/construct_resources_sample.expected.yaml
+++ b/hyperapp/guesser/test/test_resources/construct_resources_sample.expected.yaml
@@ -20,7 +20,7 @@ import:
 - legacy_type.impl:list_spec
 - legacy_type.impl:method_command_impl
 - legacy_type.impl:object_command_impl
-- legacy_type.impl:python_object_association
+- legacy_type.builtin:python_object_association
 - legacy_type.lcs:lcs_set_association
 - legacy_type.builtin:python_module
 associations:
@@ -30,7 +30,7 @@ associations:
   piece_t: legacy_type.construct_resources_sample:sample
   ctr_fn: SampleList
   spec: SampleList.spec
-- _type: legacy_type.impl:python_object_association
+- _type: legacy_type.builtin:python_object_association
   t: legacy_type.construct_resources_sample:sample
   function: SampleList
 - _type: legacy_type.lcs:lcs_set_association
