--- a/hyperapp/guesser/update_resources.resources.yaml
+++ b/hyperapp/guesser/update_resources.resources.yaml
@@ -25,7 +25,7 @@ import:
 - legacy_type.impl:impl_association
 - legacy_type.impl:list_spec
 - legacy_type.impl:method_command_impl
-- legacy_type.impl:python_object_association
+- legacy_type.builtin:python_object_association
 - legacy_type.import_discoverer:import_discoverer
 - legacy_type.import_discoverer:using_incomplete_object
 - legacy_type.import_recorder:import_recorder
@@ -67,7 +67,7 @@ definitions:
       htypes.impl.impl_association: legacy_type.impl:impl_association
       htypes.impl.list_spec: legacy_type.impl:list_spec
       htypes.impl.method_command_impl: legacy_type.impl:method_command_impl
-      htypes.impl.python_object_association: legacy_type.impl:python_object_association
+      htypes.builtin.python_object_association: legacy_type.builtin:python_object_association
       htypes.import_discoverer.import_discoverer: legacy_type.import_discoverer:import_discoverer
       htypes.import_discoverer.using_incomplete_object: legacy_type.import_discoverer:using_incomplete_object
       htypes.import_recorder.import_recorder: legacy_type.import_recorder:import_recorder
