--- a/hyperapp/resource/attribute.resources.yaml
+++ b/hyperapp/resource/attribute.resources.yaml
@@ -1,6 +1,6 @@
 import:
 - legacy_service:python_object_creg
-- legacy_type.impl:python_object_association
+- legacy_type.builtin:python_object_association
 - legacy_type.builtin:python_module
 - legacy_type.attribute:attribute
 definitions:
