--- a/hyperapp/resource/mock_module.resources.yaml
+++ b/hyperapp/resource/mock_module.resources.yaml
@@ -1,13 +1,13 @@
 import:
 - legacy_service:python_object_creg
 - legacy_type.attribute:attribute
-- legacy_type.impl:python_object_association
+- legacy_type.builtin:python_object_association
 - legacy_type.mock_module:mock_module
 - legacy_type.builtin:python_module
 
 associations:
 
-- _type: legacy_type.impl:python_object_association
+- _type: legacy_type.builtin:python_object_association
   t: legacy_type.mock_module:mock_module
   function: python_object
 
