--- a/hyperapp/resource/partial.resources.yaml
+++ b/hyperapp/resource/partial.resources.yaml
@@ -1,11 +1,11 @@
 import:
 - legacy_service:python_object_creg
 - legacy_type.attribute:attribute
-- legacy_type.impl:python_object_association
+- legacy_type.builtin:python_object_association
 - legacy_type.builtin:python_module
 - legacy_type.partial:partial
 associations:
-- _type: legacy_type.impl:python_object_association
+- _type: legacy_type.builtin:python_object_association
   t: legacy_type.partial:partial
   function: python_object
 definitions:
