--- a/hyperapp/resource/raw.resources.yaml
+++ b/hyperapp/resource/raw.resources.yaml
@@ -1,11 +1,11 @@
 import:
 - legacy_service:web
 - legacy_type.attribute:attribute
-- legacy_type.impl:python_object_association
+- legacy_type.builtin:python_object_association
 - legacy_type.builtin:python_module
 - legacy_type.raw:raw
 associations:
-- _type: legacy_type.impl:python_object_association
+- _type: legacy_type.builtin:python_object_association
   t: legacy_type.raw:raw
   function: python_object
 definitions:
