--- a/hyperapp/sample/sample_list.resources.yaml
+++ b/hyperapp/sample/sample_list.resources.yaml
@@ -9,7 +9,7 @@ import:
 - legacy_type.impl:impl_association
 - legacy_type.impl:list_spec
 - legacy_type.impl:method_command_impl
-- legacy_type.impl:python_object_association
+- legacy_type.builtin:python_object_association
 - legacy_type.lcs:lcs_set_association
 - legacy_type.builtin:python_module
 - legacy_type.sample_list:item
@@ -21,7 +21,7 @@ associations:
   piece_t: legacy_type.sample_list:sample_list
   ctr_fn: SampleList
   spec: SampleList.spec
-- _type: legacy_type.impl:python_object_association
+- _type: legacy_type.builtin:python_object_association
   t: legacy_type.sample_list:sample_list
   function: SampleList
 - _type: legacy_type.lcs:lcs_set_association
