--- a/hyperapp/server/module_list.resources.yaml
+++ b/hyperapp/server/module_list.resources.yaml
@@ -16,7 +16,7 @@ import:
 - legacy_type.impl:impl_association
 - legacy_type.impl:list_spec
 - legacy_type.impl:method_command_impl
-- legacy_type.impl:python_object_association
+- legacy_type.builtin:python_object_association
 - legacy_type.lcs:lcs_set_association
 - legacy_type.module_list:item
 - legacy_type.module_list:module_list
@@ -37,7 +37,7 @@ associations:
   piece_t: legacy_type.module_list:module_list
   ctr_fn: ModuleList
   spec: ModuleList.spec
-- _type: legacy_type.impl:python_object_association
+- _type: legacy_type.builtin:python_object_association
   t: legacy_type.module_list:module_list
   function: ModuleList
 - _type: legacy_type.lcs:lcs_set_association
