--- a/hyperapp/server/server_global_commands.resources.yaml
+++ b/hyperapp/server/server_global_commands.resources.yaml
@@ -14,7 +14,7 @@ import:
 - legacy_type.impl:impl_association
 - legacy_type.impl:list_spec
 - legacy_type.impl:method_command_impl
-- legacy_type.impl:python_object_association
+- legacy_type.builtin:python_object_association
 - legacy_type.lcs:lcs_set_association
 - legacy_type.builtin:python_module
 - legacy_type.server_global_commands:item
@@ -26,7 +26,7 @@ associations:
   piece_t: legacy_type.server_global_commands:server_global_commands
   ctr_fn: ServerGlobalCommands
   spec: ServerGlobalCommands.spec
-- _type: legacy_type.impl:python_object_association
+- _type: legacy_type.builtin:python_object_association
   t: legacy_type.server_global_commands:server_global_commands
   function: ServerGlobalCommands
 - _type: legacy_type.lcs:lcs_set_association
