--- a/hyperapp/guesser/update_resources.resources.yaml
+++ b/hyperapp/guesser/update_resources.resources.yaml
@@ -36,7 +36,7 @@ import:
 - legacy_type.inspect:object_t
 - legacy_type.inspect:record_t
 - legacy_type.lcs:lcs_set_association
-- legacy_type.legacy_type:type
+- legacy_type.builtin:legacy_type
 - legacy_type.partial:param
 - legacy_type.partial:partial
 - legacy_type.builtin:python_module
@@ -78,7 +78,7 @@ definitions:
       htypes.inspect.object_t: legacy_type.inspect:object_t
       htypes.inspect.record_t: legacy_type.inspect:record_t
       htypes.lcs.lcs_set_association: legacy_type.lcs:lcs_set_association
-      htypes.legacy_type.type: legacy_type.legacy_type:type
+      htypes.builtin.legacy_type: legacy_type.builtin:legacy_type
       htypes.partial.param: legacy_type.partial:param
       htypes.partial.partial: legacy_type.partial:partial
       htypes.builtin.python_module: legacy_type.builtin:python_module
